# librespot

./: .gitignore  COMPILING.md  Cargo.toml  xbuild.sh
.github/actions/xbuild-spotty/: action.yml
.github/workflows/: build-spotty-linux.yml  build-spotty-mac.yml  build-spotty-windows.yml  build-spotty.yml  custom-linux-build-spotty.yml  test.yml
connect/src/: config.rs  spirc.rs
core/: Cargo.toml
core/src/: config.rs
discovery/examples/: discovery.rs
discovery/src/: lib.rs
docker/: Dockerfile  README.md  docker-build.sh
playback/: Cargo.toml
playback/src/: config.rs  convert.rs  player.rs
playback/src/audio_backend/: mod.rs  pipe.rs
protocol/proto/: media_manifest.proto  metadata.proto
src/: main.rs  player_event_handler.rs  spotty.rs
