[package]
name = "spotty"
version = "1.1.1"
authors = ["Librespot Org", "Michael Herger <michael@herger.net>"]
license = "MIT"
keywords = ["spotify"]
repository = "https://github.com/michaelherger/librespot"
readme = "README.md"
edition = "2018"

[workspace]

[lib]
name = "librespot"
path = "src/lib.rs"

[[bin]]
name = "spotty"
path = "src/main.rs"
doc = false

[dependencies.librespot-audio]
path = "audio"
version = "0.3.0"

[dependencies.librespot-connect]
path = "connect"
version = "0.3.0"

[dependencies.librespot-core]
path = "core"
version = "0.3.0"

[dependencies.librespot-discovery]
path = "discovery"
version = "0.3.0"

[dependencies.librespot-metadata]
path = "metadata"
version = "0.3.0"

[dependencies.librespot-playback]
path = "playback"
version = "0.3.0"

[dependencies.librespot-protocol]
path = "protocol"
version = "0.3.0"

[dependencies]
base64 = "0.13"
env_logger =  {version = "0.8", default-features = false, features = ["termcolor","humantime","atty"]}
futures-util = { version = "0.3", default_features = false }
getopts = "0.2.21"
hex = "0.4"
hyper = "0.14"
log = "0.4"
rpassword = "5.0"
serde_json = "0.9.5"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "process"] }
url = "2.2"
sha-1 = "0.9"

[features]
with-dns-sd = ["librespot-discovery/with-dns-sd"]

[profile.release]
lto = true
panic = 'abort'
