[package]
name = "spotty"
version = "1.3.99"
authors = ["Librespot Org", "Michael Herger <michael@herger.net>"]
license = "MIT"
keywords = ["spotify"]
repository = "https://github.com/michaelherger/librespot"
readme = "README.md"
edition = "2018"

[workspace]

[lib]
name = "librespot"
path = "src/lib.rs"

[[bin]]
name = "spotty"
path = "src/main.rs"
doc = false

[dependencies.librespot-audio]
path = "audio"
version = "0.5.0-dev"

[dependencies.librespot-connect]
path = "connect"
version = "0.5.0-dev"

[dependencies.librespot-core]
path = "core"
version = "0.5.0-dev"

[dependencies.librespot-discovery]
path = "discovery"
version = "0.5.0-dev"

[dependencies.librespot-metadata]
path = "metadata"
version = "0.5.0-dev"

[dependencies.librespot-playback]
path = "playback"
version = "0.5.0-dev"

[dependencies.librespot-protocol]
path = "protocol"
version = "0.5.0-dev"

[dependencies]
env_logger =  { version = "0.9", default-features = false, features = ["termcolor", "humantime", "atty"] }
futures-util = { version = "0.3", default_features = false }
getopts = "0.2"
hex = "0.4"
hyper = "0.14"
log = "0.4"
rpassword = "6.0"
serde_json = "0.9.5"
sha1 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros", "signal", "sync", "parking_lot", "process"] }
url = "2.2"

[features]
with-dns-sd = ["librespot-discovery/with-dns-sd", "librespot-discovery/with-dns-sd"]
passthrough-decoder = ["librespot-playback/passthrough-decoder"]

default = ["passthrough-decoder"]

[profile.release]
lto = true
panic = 'abort'
